--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,6 +16,10 @@
 body {
   background-color: var(--main-bgc-color);
   color: var(--primary-text-color);
+  font-family: Roboto, sans-serif;
+}
+header{
+    background-color: var(--white-text-color);
 }
 .link{
     text-decoration: none;
@@ -24,8 +28,15 @@ body {
     list-style: none;
 }
 
-/*------------- header*/
+/*------------- header*/   
 /* nav */
+.logo{
+    font-family: Raleway;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+}
 .web{ 
     color: var(--accent-color);
 }
@@ -35,6 +46,10 @@ body {
 
 .site-nav .link{
     color: var(--secondary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .site-nav .link.current{
@@ -54,24 +69,70 @@ body {
 /* стили для hero*/
 .hero{
     background-color: var(--dark-bgc-color);
+    letter-spacing: 0.06em;
 }
 .hero-title {
     color: #ffffff;
+
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    text-transform: uppercase;
 }
 .button-hero{
     color: var(--white-text-color);
+
     background-color: var(--accent-color);
+    font-weight:700;
+    font-size: 16px;
+    line-height: 1.87;
+    display: flex;
+    text-align: center;   
 }
 /*section*/
+.section{
+    letter-spacing: 0.03em;
+}
 .section-title{
     color: var(--secondary-text-color);
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1,16;
+    text-align: center;
+}
+.section.team{
+    background-color: var(--secondary-bgc-color);
 }
 .advantages .title{
     color: var(--secondary-text-color);
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+}
+.advantages .text{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
 }
 .employer .title{
     color: var(--secondary-text-color);
+    
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+
 }
+.employer .text{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    }
 /*-------------footer*/
 footer{
     background-color: var(--dark-bgc-color);
@@ -87,11 +148,18 @@ footer{
     color: var(--footer-text-color);
     font-style: normal;
 }
-
+/* Страница портфолио*/
 /* Кнопки */
 .button{
     color: var(--secondary-text-color);
     background-color: var(--secondary-bgc-color);
+
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 .button:hover, 
@@ -102,4 +170,15 @@ footer{
 
 .project .title{
     color: var(--secondary-text-color);
+
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
 }
+.project .text{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.87;
+     letter-spacing: 0.03em;
+    }
