--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,11 +58,21 @@ header{
   
 .adress-header{
     color: var(--primary-text-color);
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .adress-header:hover,
 .adress-header:focus{
     color: var(--accent-color);
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
 }
 
 /*------------ main*/
@@ -142,11 +152,20 @@ footer{
 }
 .adress{
     color: var(--white-text-color);
-    font-style: normal;
+    font-style: normal;  
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71x;
+    letter-spacing: 0.03em;
 }
+
 .adress-footer {
-    color: var(--footer-text-color);
+    color: var(--footer-text-color);  
     font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 /* Страница портфолио*/
 /* Кнопки */
